[package]
name = "iro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.9"
itertools = "0.12.1"
palette = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
