[package]
name = "iro-web"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
iro = { path = "../lib" }
base64 = "0.21.7"
serde_yaml = "0.9.32"
image = "0.24.9"
anyhow = "1.0.80"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FileList", "File"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
